--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   }
   .footer {
       font-size: small;
-      line-height: 1.5;
+      line-height: 1.6;
       margin-left: auto;
       margin-right: auto;
       width: 7.5em;
@@ -22,23 +22,26 @@ body {
     margin: 10px;
   }
   .search-engine img {
-    width: 100px;
-    height: 100px;
+    width: 40px;
+    height: 40px;
+    vertical-align:bottom;
   }
   .search-engine input[type="text"] {
     width: 300px;
     padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 10px;
+    margin-bottom: 5px;
+    border-radius: 15px;
+    border-color: #3A81F1;
     font-size: 16px;
   }
   .search-engine button {
-    background-color: #4CAF50;
+    background-color: #3A81F1;
     color: white;
     padding: 10px 20px;
     border: none;
+    height: auto;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 12px;
     font-size: 16px;
   }
   .search-engine button:hover {
@@ -52,7 +55,7 @@ body {
   .links {
     width: 40px;
     height: 40px;
-    margin-right: 7px;
+    margin-right: 10px;
   }
 
   .div-img {
