--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
       line-height: 1.6;
       margin-left: auto;
       margin-right: auto;
+      margin-bottom: 0;
       width: 7.5em;
       position: fixed;
       left: 0;
