--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,47 @@
-body {
-    font-family: Arial, sans-serif;
+  body {
+    font-family: "Nerko One", cursive;
+    font-weight: 400;
+    font-style: normal;
     text-align: center;
+    font-size: medium;
     background-color: #ffe0a1;
   }
+
   .footer {
-      font-size: small;
-      line-height: 1.6;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 0;
-      width: 7.5em;
-      position: fixed;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      background-color: #707070;
-      color: #fff;
-      text-align: center;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+    font-size: medium;
+    line-height: 1.6;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    width: 7.5em;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #707070;
+    color: #fff;
+    text-align: center;
+    transition: 1s;
   }
-  .searcher{
+
+  .footer:hover {
+    transform: scale(1.2);
+  }
+
+  .search{
     display: grid;
+  }
+
+  .logo {
+    color: #ab51ff;
+    font-size: 55px;
+    transition: 0.7s;
+  }
+
+  .logo:hover {
+    transform: scale(1.2);
   }
 
   .search-engine {
@@ -36,10 +58,20 @@ body {
     padding: 10px;
     margin-bottom: 5px;
     border-radius: 15px;
-    color:  #989898;
+    background-color:  #fff4de !important;
     border-color: #3A81F1;
+    border-width: 2.5px;
     font-size: 16px;
+    font-family: "Nerko One", cursive, "Nunito", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    transition: 0.5s;
   }
+
+  .search-engine input:hover {
+    transform: scale(1.02);
+  }
+
   .search-engine button {
     background-color: #3A81F1;
     color: white;
@@ -49,23 +81,33 @@ body {
     cursor: pointer;
     border-radius: 12px;
     font-size: 16px;
+    font-family: "Nerko One", cursive;
+    font-weight: 400;
+    font-style: normal;
+    transition: 0.5s; 
   }
+
   .search-engine button:hover {
     background-color: #33A852;
+    transform: scale(1.1);
   }
 
-  .empty {
-    height: 10px;
-  }
-
-  .links {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-  }
+  .search-engine button:click
 
   .div-img {
     display: inline-block;
+  }
+
+  .div-img img{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    transition: 0.5s;
+    display: inline;
+  }
+
+  .div-img img:hover {
+    transform: scale(1.3);
   }
 
   a {
