--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   text-align: center;
   font-size: medium;
   background-color: #ffe0a1;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .footer {
