--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,9 @@ body {
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 95%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
   background-color: #707070;
   color: #fff;
   text-align: center;
@@ -115,6 +117,15 @@ body {
   transform: scale(1.3);
 }
 
+.incognito {
+  color: #323232;
+  transition: 0.5s;
+}
+
+.incognito:hover{
+  transform: scale(1.2);
+}
+
 a {
   text-decoration: none;
 }
@@ -168,6 +179,10 @@ a {
   
   .links-text {
     font-size: x-large;
+  }
+
+  .incognito a {
+    font-size: medium;
   }
 
   .div-img img {
